# pyhyeon

./: .gitignore  Cargo.toml  LICENSE  README.md  benchmark_runner.py  compare_jit.py  detailed_benchmark.py  simple_string_test.pyh  test.pyh  test_string.pyh
.claude/: settings.local.json
.github/workflows/: deploy.yml
benches/: jit_benchmark.rs
examples/: collections_showcase.pyh
src/: builtins.rs  lib.rs  main.rs  repl.rs  runtime_io.rs
src/interpreter/: mod.rs
src/lexer/: mod.rs  raw_token.rs  token.rs
src/parser/: ast.rs  mod.rs
src/semantic/: mod.rs  scope.rs  typecheck.rs
src/vm/: bytecode.rs  compiler.rs  disasm.rs  machine.rs  mod.rs  native_methods.rs  type_def.rs  utils.rs  value.rs
src/vm/builtins/: dict.rs  (+25 more)
tests/: e2e_tests.rs
tests/programs/: benchmark_arithmetic.pyh  benchmark_fib.pyh  benchmark_long.pyh  benchmark_simple_loop.pyh  branch.pyh  branch_heavy.pyh  class_create.pyh  class_simple_test.pyh  collections_complex.pyh  create_in_method_test.pyh  debug_add_test.pyh  debug_magic_simple.pyh  dict_basic.pyh  dict_for.pyh  dict_methods.pyh  edge_case_comprehensive.pyh  fib_iter.pyh  for_nested.pyh  for_range_simple.pyh  for_range_start_stop.pyh  for_range_step.pyh  for_sum.pyh  func_rec.pyh  global_create_test.pyh  heavy_loop.pyh  input_test.pyh  input_without_prompt.pyh  jit_bench_100k.pyh  jit_bench_10k.pyh  jit_minimal.pyh  jit_simple.pyh  jit_test.pyh  list_basic.pyh  list_comprehension_alt.pyh  list_for.pyh  list_methods.pyh  method_call_test.pyh  method_chaining.pyh  method_return_test.pyh  operator_magic_test.pyh  (+21 more)
web/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css
(+41 files in other folders)
