[package]
authors = ["SeoHyeon Cho <csh1668@gmail.com>"]
name = "pyhyeon"
version = "0.1.0"
edition = "2024"

[lib]
name = "pyhyeon"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "pyhyeon"
path = "src/main.rs"

[dependencies]
logos = "0.15.1"
chumsky = { version = "1.0.0-alpha.8", default-features = false, features = ["std"] }
ariadne = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
instant = { version = "0.1", features = ["wasm-bindgen"] }

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2.104"
serde-wasm-bindgen = "0.6"