[package]
authors = ["SeoHyeon Cho <csh1668@gmail.com>"]
name = "pyhyeon"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
name = "pyhyeon"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "pyhc"
path = "src/main.rs"

[dependencies]
logos = "0.15.1"
chumsky = { version = "1.0.0-alpha.8", default-features = false, features = ["std"] }
ariadne = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
instant = { version = "0.1", features = ["wasm-bindgen"] }
bitflags = "2.6"
strum = { version = "0.27.2", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rustyline = "14.0"
dirs = "5.0"

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2.104"
serde-wasm-bindgen = "0.6"

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16